force-app/main/default/objects/Mass_Plot_Note__c/Mass_Plot_Note__c.object-meta.xml
<CustomObject>
    <label>Mass Plot Note</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Mass Plot Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mass Plot Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>