force-app/main/default/objects/Mass_Plot_Note__c/fields/Explore_Rating__c.field-meta.xml
<CustomField>
    <fullName>Explore_Rating__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Explore Rating</label>
    <referenceTo>Explore_Rating__c</referenceTo>
    <relationshipLabel>Mass Plot Notes</relationshipLabel>
    <relationshipName>Mass_Plot_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>