force-app/main/default/objects/Mass_Plot_Note__c/fields/Plot_Location__c.field-meta.xml
<CustomField>
    <fullName>Plot_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Location</label>
    <referenceTo>Plot_Location__c</referenceTo>
    <relationshipLabel>Mass Plot Notes</relationshipLabel>
    <relationshipName>Mass_Plot_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>