force-app/main/default/objects/Mass_Plot_Note__c/fields/SiteUser__c.field-meta.xml
<CustomField>
    <fullName>SiteUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SiteUser</label>
    <referenceTo>SiteUser__c</referenceTo>
    <relationshipLabel>Mass Plot Notes</relationshipLabel>
    <relationshipName>Mass_Plot_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>