force-app/main/default/objects/Mass_Plot_Note__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>40</length>
    <type>Text</type>
</CustomField>